// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataPickerBody should be rendered with maximum props 1`] = `
Array [
  <div
    className="searchWrapper"
  >
    <div
      className=""
      style={
        Object {
          "alignSelf": undefined,
          "flexBasis": "0",
          "flexGrow": 1,
          "flexShrink": undefined,
          "minWidth": 0,
          "textAlign": undefined,
        }
      }
    >
      <div
        className="container uui-input-box -clickable root size-48 mode-form"
        onBlur={[Function]}
        onFocus={[Function]}
        tabIndex={-1}
      >
        <div
          className="container uui-icon uui-enabled"
          style={Object {}}
        >
          <svg
            className=""
          />
        </div>
        <input
          aria-invalid={false}
          className="uui-input"
          inputMode="search"
          onChange={[Function]}
          onKeyDown={[Function]}
          placeholder="Search"
          tabIndex={0}
          type="search"
          value=""
        />
      </div>
    </div>
  </div>,
  <div
    className="root size-36 body modal undefined container align-items-center"
    style={
      Object {
        "columnGap": undefined,
        "maxHeight": 800,
        "rowGap": undefined,
      }
    }
  >
    <div
      className="root scrollContainer"
      cx="scrollContainer"
      style={
        Object {
          "display": "flex",
          "height": "100%",
          "overflow": "hidden",
          "position": "relative",
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "WebkitOverflowScrolling": "touch",
            "bottom": 0,
            "display": "flex",
            "flex": "1 1 auto",
            "flexDirection": "column",
            "left": 0,
            "marginBottom": 0,
            "marginRight": 0,
            "overflow": "scroll",
            "position": "relative",
            "right": 0,
            "top": 0,
          }
        }
      >
        <div
          className="listContainer"
          style={
            Object {
              "minHeight": "0px",
            }
          }
        >
          <div
            role="listbox"
            style={
              Object {
                "marginTop": 0,
              }
            }
          />
        </div>
        <div
          className="container uui-blocker-container root"
          style={
            Object {
              "minHeight": undefined,
            }
          }
        >
          <div />
        </div>
      </div>
      <div
        className="uui-track-horizontal"
        style={
          Object {
            "display": "none",
            "height": 6,
            "position": "absolute",
          }
        }
      >
        <div
          className="uui-thumb-horizontal"
        />
      </div>
      <div
        className="uui-track-vertical"
        style={
          Object {
            "display": "none",
            "position": "absolute",
            "width": 6,
          }
        }
      >
        <div
          className="uui-thumb-vertical"
        />
      </div>
    </div>
  </div>,
]
`;

exports[`DataPickerBody should be rendered with minimum props 1`] = `
<div
  className="root size-36 body undefined undefined container align-items-center"
  style={
    Object {
      "columnGap": undefined,
      "maxHeight": undefined,
      "rowGap": undefined,
    }
  }
>
  <div
    className="no-found-size-36"
    style={
      Object {
        "alignSelf": undefined,
        "flexBasis": "0",
        "flexGrow": 1,
        "flexShrink": undefined,
        "minWidth": 0,
        "textAlign": "center",
      }
    }
  >
    <div
      className="root uui-text uui-font-regular uui-color-primary line-height-18 font-size-14 v-padding-9 container"
    >
      No records found
    </div>
  </div>
</div>
`;

exports[`DataPickerBody should be rendered without rows 1`] = `
<div
  className="root size-36 body undefined undefined container align-items-center"
  style={
    Object {
      "columnGap": undefined,
      "maxHeight": undefined,
      "rowGap": undefined,
    }
  }
>
  <div>
    Not found
  </div>
</div>
`;
